--- a/module-1/Content-structuur-tyling/persoonlijke-web/css/styles-web.css
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/css/styles-web.css
@@ -11,6 +11,7 @@ header {
 header nav {
   float: left;
 }
+
 header nav ul li {
   display:inline-block;
   margin-top: 7%;
@@ -23,11 +24,12 @@ header nav ul li a {
 }
 header nav ul li:last-child a {
   text-transform: uppercase;
-  color: rgb(249, 1, 1);
+  float:unset;
 }
 
+
 .text_box {
-  background-color: rgb(169, 169, 169);
+  background-color: rgb(210, 210, 210);
   width: auto;
   height: auto;
   padding: 10px;
@@ -40,14 +42,21 @@ header nav ul li:last-child a {
   margin-left: 30px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
-  color: red;
+  color: rgb(105, 105, 105);
 }
 
 footer {
   background-color: #f2f2f2;
   padding: 25px;
 }
+footer h4{
+  font-weight: bolder;
+  font-family:'Times New Roman', Times, serif;
+}
 
+.margin{
+  margin: 10px;
+}
 
 
 
