--- a/module-1/Content-structuur-tyling/persoonlijke-web/css/styles-web.css
+++ b/module-1/Content-structuur-tyling/persoonlijke-web/css/styles-web.css
@@ -46,16 +46,20 @@ header nav ul li:last-child a {
 }
 
 footer {
-  background-color: #f2f2f2;
-  padding: 25px;
+  padding: 20px;
 }
-footer h4{
+footer h5{
   font-weight: bolder;
   font-family:'Times New Roman', Times, serif;
 }
 
 .margin{
   margin: 10px;
+  padding-left: 10px;
+}
+
+.space{
+  margin-top: 50px;
 }
 
 
